 * #8990: HtPasswdStore and SessionStore with HtPasswdHashMethod share option
   by adding dedicated options 'db_htpasswd_hash_type' and 'db_htdigest_realm'
 * #9079: PostgreSQL: Database error when creating new user with attributes
 * #9139: SvnServePasswordStore and case sensitivity
 * #9246: InternalError when refresh_passwd = true

 new features
 * 9618: HttpAuthStore authentication enhancement
   by allowing a relative URL for `authentication_url` configuration option
 * add recursion to option parser for configuration admin page and provide
   available valid values for an `ExtensionOption` like `IPasswordHashMethod`
   by a select field (dropdown box) - or meaningful message on missing options
 * add cleanup page for purging `session_attribute` db table via admin web UI


acct_mgr-0.3.2 (26-Aug-2011) - branch 0.11
 resolved issues
 * #9051: Unable to add users due to existing email addresses
   by fixing SQL statements responsible for db cleanup on account deletion
 * #9082: Remove cookie's `expires` param (0.12) when rememberme is unchecked
 * #9088: Expire trac_auth_session cookie before LoginModule._do_logout
 * #9091: <b> tags in user registration notification
 * #9092: TypeError: __call__() got an unexpected keyword argument 'link'
 * #9093: A href tags in verification notice
 * #9095: Delete session cookie if client sent it and rememberme is unchecked
 * #9099: Expire session cookie whenever trac_auth cookie gets expired
 * #9107: Error when building the egg file
 * #9108: TypeError: 'NoneType' object is not iterable
 * #9109: TypeError: 'NoneType' object is not iterable
 * fix TypeError in account details admin page for not yet authenticated users
 * make option `verify_email` effective for `RegistrationModule`
 * fix bug from initial password store chaining implementation leading to
   false-positives on user store discovery and later unexpected login failure
 * change account details admin page into users admin subpage

